--- a/mamatest.html
+++ b/mamatest.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
+    /* 단계별.. */
     *{box-sizing: border-box}
     .progress2{width:100%;height:36px;line-height: 36px;border-radius:36px; background-color: #e6e6e685; margin-top: 200px;}
     .progress2 li{width:5%;height:36px;line-height: 36px;position:relative;list-style:none;display:inline-block;text-align:center;}
     .progress2 li:after{content:'';position:absolute;display: inline-block;width:28px;height:1px;background-color: #c8c8c8;top: 50%;
-    left: 30px;}
+    left: 36px;}
     .progress2 li a{width:24px;height:24px;position:relative;top: 50%;transform:translateY(-50%);
 	display:inline-block;font-size:12px;border-radius: 24px;background-color:#fff; border:1px solid #c8c8c8 }
     .progress2 li a span:not(.tooltip){position:absolute;top: 50%;transform:translateY(-50%);width:100%; left:0}
@@ -36,7 +37,17 @@
     border-right: 4px solid transparent;
     border-left: 4px solid transparent;
 }
-   
+
+/* 이미지 체크박스 */
+.best_list {list-style-type: none;}
+.best_list li {width : 22%;float:left;height:300px;margin-right:20px;}
+.best_list input[type="checkbox"][id^="cb"] {display: none;}
+.best_list label {display: block;  position: relative;  cursor: pointer;}
+.best_list label img {  height:auto;  max-width: 100%;  transition-duration: 0.2s;  transform-origin: 50% 50%;}
+.best_list :checked + label:after {  content: url(pureimg/icon_check.png);  
+  transform: scale(1);  position: absolute;  top: 50%;  left: 50%;  transform: translate(-50%, -50%);}
+.best_list :checked + label img {  transform: scale(0.99);  /* box-shadow: 0 0 5px #333; */  z-index: -1;}
+
    </style>
 </head>
 <body>
@@ -54,5 +65,22 @@
             <li class="on"><a href="#"><span>9</span><span class="tooltip">8/20</span></a></li>
             <li><a href="#"><span>10</span></a></li>
         </ul>
+
+
+<ul class="best_list">
+    <li><input type="checkbox" id="cb1" />
+        <label for="cb1"><img src="pureimg/food_1.jpg" /></label>
+    </li>
+    <li><input type="checkbox" id="cb2" />
+        <label for="cb2"><img src="pureimg/food_2.jpg" /></label>
+    </li>
+    <li><input type="checkbox" id="cb3" />
+        <label for="cb3"><img src="pureimg/food_3.jpg" /></label>
+    </li>
+    <li><input type="checkbox" id="cb4" />
+        <label for="cb4"><img src="pureimg/food_4.jpg" /></label>
+    </li>
+</ul>
+
 </body>
 </html>
