--- a/test.html
+++ b/test.html
@@ -61,6 +61,7 @@
 <!-- http://keith-wood.name/countdown.html     -->
 <!--     https://jsfiddle.net/VanKusanagi/go06kcre/ -->
 <!--     https://codepen.io/anon/pen/oaqxgb -->
+<!--  height: 600px;overflow: hidden;overflow-y: scroll;-webkit-overflow-scrolling: touch;   아이폰 아이프레임..fixed    -->
     
 
 </body>
